Fix partners on mobile

--- a/_sass/partials/_partners.scss
+++ b/_sass/partials/_partners.scss
@@ -12,11 +12,15 @@ $_spacing: 40px;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
 }
 
 .partner {
-    flex-basis: 50%;
-    max-width: 50%;
+    flex-basis: 100%;
+    max-width: 100%;
     padding: 15px;
+
+    @include respond-to(md) {
+        flex-basis: 50%;
+        max-width: 50%;
+    }
 }
